# endless-terminals

./: LICENSE  README.md  generate_solutions.py  generate_tasks.py  pyproject.toml  vllm_serve_m2_5.sh
data/: validation.parquet
generator/: __init__.py  apptainer_build.py  apptainer_def_gen.py  completion_test_gen.py  env.py  initial_state_test_gen.py  sample_solutions.py  task_template_gen.py
scripts/: get_ubuntu_sif.sh  install_apptainer.sh  install_apptainer_nosudo.sh
